--- a/Fridge Advisor/index.html
+++ b/Fridge Advisor/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <title>Fridge Advisor</title>
 </head>
 <body>
 
@@ -20,10 +21,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">About Us</a>
-      <a class="nav-item nav-link" href="#">Link 2</a>
-      <a class="nav-item nav-link" href="#">Link 3</a>
+      <a class="nav-item nav-link active" href="#">Profile<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">Fridge</a>
     </div>
   </div>
 </nav>
@@ -40,13 +39,13 @@
     <!-- The slideshow -->
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
-        <img src="https://placehold.it/1200x400?text=IMAGE1" alt="Image 1">
+        <img src="https://placehold.it/1200x600?text=IMAGE1" alt="Image 1">
       </div>
       <div class="carousel-item">
-        <img src="https://placehold.it/1200x400?text=IMAGE2" alt="Image 2">
+        <img src="https://placehold.it/1200x600?text=IMAGE2" alt="Image 2">
       </div>
       <div class="carousel-item">
-        <img src="https://placehold.it/1200x400?text=IMAGE3" alt="Image 3">
+        <img src="https://placehold.it/1200x600?text=IMAGE3" alt="Image 3">
       </div>
     </div>
 
@@ -60,22 +59,97 @@
   </div>
 
   <!-- Containers beneath carousel -->
-  <div class="container text-center">
+  <div class="container text-center under-car">
     <div class="row">
       <div class="col-sm-4">
         <img scr="https://placehold.it/150x80?text=IMAGE" class="img-responsive" alt="Image">
-        <p>About Us</p>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">About Us</a>
+            </h4>
+          </div>
+          <div id="collapse1" class="panel-collapse collapse in">
+            <div class="panle-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+             velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+             sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+           </div>
+         </div>
       </div>
       <div class="col-sm-4">
         <img scr="https://placehold.it/150x80?text=IMAGE" class="img-responsive" alt="Image">
-        <p>Link 2</p>
-      </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">How To Use</a>
+            </h4>
+          </div>
+          <div id="collapse2" class="panel-collapse collapse in">
+            <div class="panle-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+             velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+             sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+           </div>
+         </div>
+       </div>
       <div class="col-sm-4">
         <img scr="https://placehold.it/150x80?text=IMAGE" class="img-responsive" alt="Image">
-        <p>Link 3</p>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Your Contribution</a>
+            </h4>
+          </div>
+          <div id="collapse3" class="panel-collapse collapse in">
+            <div class="panle-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+             velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+             sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+           </div>
+         </div>
       </div>
-    </div>
   </div><br>
+
+
+
+<!-- About us text  -->
+<!--  <div class="titleAndTextContainer" >
+      <h1 class="heading">About Us</h1>
+      <p class="sectionText">
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+         velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+         sunt in culpa qui officia deserunt mollit anim id est laborum."
+      </p>
+  </div>
+
+  <div class="titleAndTextContainer" >
+      <h1 class="heading">How to Use</h1>
+      <p class="sectionText">
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+         velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+         sunt in culpa qui officia deserunt mollit anim id est laborum."
+      </p>
+  </div>
+
+  <div class="titleAndTextContainer" >
+      <h1 class="heading">Your Contribution</h1>
+      <p class="sectionText">
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+         velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+         sunt in culpa qui officia deserunt mollit anim id est laborum."
+      </p>
+  </div> -->
+
 
   <footer class="container-fluid text-center">
     <p>Footer Text</p>
