--- a/Fridge Advisor/index.html
+++ b/Fridge Advisor/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <a class="navbar-brand" href="#">
     <img src="logo.png" width="200" height="81">
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -24,7 +24,11 @@
       <a class="nav-item nav-link active" href="#">Profile<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="#">Fridge</a>
     </div>
-  </div>
+  </div>-->
+  <form class="form-inline float-right navbar-right">
+    <button class="btn btn-outline-success" id="signup" type="button">Sign Up</button>
+    <button class="btn btn-outline-success" id="signin" type="button">Sign In</button>
+  </form>
 </nav>
 
   <div id="topCarousel" class="carousel slide" data-ride="carousel">
