--- a/Fridge Advisor/profile.html
+++ b/Fridge Advisor/profile.html
@@ -33,7 +33,7 @@
     <a class="nav-link active" href="#">Profile</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Fridge</a>
+    <a class="nav-link" href="fridge.html">Fridge</a>
   </li>
 </ul>
 
