--- a/Fridge Advisor/index.html
+++ b/Fridge Advisor/index.html
@@ -43,7 +43,9 @@
     <!-- The slideshow -->
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
-        <img src="https://placehold.it/1200x600?text=IMAGE1" alt="Image 1">
+        <img src="car-1.png" alt="Just one quarter of all wasted food could feed
+the 795 million undernourished people around
+the world who suffer from hunger">
       </div>
       <div class="carousel-item">
         <img src="https://placehold.it/1200x600?text=IMAGE2" alt="Image 2">
