more carousel images

--- a/Fridge Advisor/index.html
+++ b/Fridge Advisor/index.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <a class="navbar-brand" href="#">
-    <img src="logo.png" width="200" height="81">
+    <img src="images/logo.png" width="200" height="81">
   </a>
   <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -43,15 +43,19 @@
     <!-- The slideshow -->
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
-        <img src="car-1.png" alt="Just one quarter of all wasted food could feed
-the 795 million undernourished people around
-the world who suffer from hunger">
+        <img src="images/car-1.png" alt="Just one quarter of all wasted food could feed
+                                  the 795 million undernourished people around
+                                  the world who suffer from hunger">
       </div>
       <div class="carousel-item">
-        <img src="https://placehold.it/1200x600?text=IMAGE2" alt="Image 2">
+        <img src="images/car-2.png" alt="Food waste generates 3.3 billions tons
+                                  of carbon dioxide, which accelerates
+                                  global climate change">
       </div>
       <div class="carousel-item">
-        <img src="https://placehold.it/1200x600?text=IMAGE3" alt="Image 3">
+        <img src="images/car-3.png" alt="The annual value of food wasted
+                                  globally is $1 trillion, and it weighs
+                                  1.3 billion tonnes">
       </div>
     </div>
 
