--- a/Fridge Advisor/fridge.html
+++ b/Fridge Advisor/fridge.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="logo.png" width="200" height="81">
+    <img src="images/logo.png" width="200" height="81">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
