managed to move buttons and nav links to right hand side

--- a/Fridge Advisor/index.html
+++ b/Fridge Advisor/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top justify-content-between">
   <a class="navbar-brand" href="#">
     <img src="images/logo.png" width="200" height="81">
   </a>
