--- a/Fridge Advisor/fridge.html
+++ b/Fridge Advisor/fridge.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <img src="images/logo.png" width="200" height="81">
   </a>
