--- a/Fridge Advisor/fridge.html
+++ b/Fridge Advisor/fridge.html
@@ -66,7 +66,7 @@
   </table>
 </div>
 
-  <footer class="container-fluid text-center">
+  <footer class="footer-copyright py-3 text-center">
     <p>Footer Text</p>
   </footer>
 
