--- a/Fridge Advisor/index.html
+++ b/Fridge Advisor/index.html
@@ -159,7 +159,7 @@
   </div> -->
 
 
-  <footer class="container-fluid text-center">
+  <footer class="footer-copyright py-3 text-center">
     <p>Footer Text</p>
   </footer>
 
