--- a/Fridge Advisor/profile.html
+++ b/Fridge Advisor/profile.html
@@ -37,7 +37,7 @@
   </li>
 </ul>
 
-  <footer class="container-fluid text-center">
+  <footer class="footer-copyright py-3 text-center">
     <p>Footer Text</p>
   </footer>
 
