--- a/Fridge Advisor/fridge.html
+++ b/Fridge Advisor/fridge.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <a class="navbar-brand" href="#">
     <img src="images/logo.png" width="200" height="81">
   </a>
@@ -37,7 +37,7 @@
   </li>
 </ul>
 
-<div class="container">
+<div class="container fridge">
   <table class="table table-striped">
     <thead>
       <tr>
